--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --hmr=true -o",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.8",
+    "@angular/cdk": "^10.1.2",
     "@angular/common": "~10.0.8",
     "@angular/compiler": "~10.0.8",
     "@angular/core": "~10.0.8",
@@ -19,6 +20,8 @@
     "@angular/platform-browser": "~10.0.8",
     "@angular/platform-browser-dynamic": "~10.0.8",
     "@angular/router": "~10.0.8",
+    "primeicons": "^4.0.0",
+    "primeng": "^10.0.0-rc.3",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
