--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,12 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+        "@app/*": ["src/app/*"],
+        "@recipes/*":["src/app/recipes/*"],
+        "@environments/*":["src/environments/*"]
+      }
   },
   "files": [
     "src/main.ts",
