divided states to modules

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,8 @@
     "types": [],
     "paths": {
         "@app/*": ["src/app/*"],
+        "@corem/*": ["src/app/core/*"],
+        "@shared/*": ["src/app/shared/*"],
         "@recipes/*":["src/app/recipes/*"],
         "@environments/*":["src/environments/*"]
       }
